# mysqlwrapper

./: .gitignore  Makefile.am  configure.ac
debian/: changelog  control
include/mysqlwrapper/: connection.h  error.h  mysqlwrapper.h  result.h  row.h  util.h
src/mysqlwrapper/: Makefile.am  connection.cc  error.cc  mysqlwrapper.cc  result.cc  row.cc  util.cc
